--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,14 @@
     "@angular/core": "^18.1.0",
     "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^18.1.0",
+    "@angular/google-maps": "^18.2.9",
     "@angular/material": "^18.2.9",
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "@asymmetrik/ngx-leaflet": "^18.0.1",
     "eslint": "^9.13.0",
+    "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "subsink": "^1.0.2",
     "tslib": "^2.3.0",
@@ -37,6 +40,7 @@
     "@angular/cli": "^18.1.0",
     "@angular/compiler-cli": "^18.1.0",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.13",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@typescript-eslint/parser": "^8.8.1",
     "eslint-config-prettier": "^9.1.0",
