--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "^18.1.0",
     "@asymmetrik/ngx-leaflet": "^18.0.1",
     "eslint": "^9.13.0",
+    "keycloak-angular": "^16.1.0",
+    "keycloak-js": "^26.0.5",
     "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "subsink": "^1.0.2",
