--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@asymmetrik/ngx-leaflet": "^18.0.1",
+    "@stomp/rx-stomp": "^2.0.0",
     "eslint": "^9.13.0",
     "keycloak-angular": "^16.1.0",
     "keycloak-js": "^26.0.5",
