--- a/ski-lift/requirements.txt
+++ b/ski-lift/requirements.txt
@@ -11,6 +11,7 @@ markdown-it-py==3.0.0
 matplotlib-inline==0.1.7
 mdit-py-plugins==0.4.2
 mdurl==0.1.2
+numpy==2.1.3
 parso==0.8.4
 pexpect==4.9.0
 pika==1.3.2
@@ -18,8 +19,11 @@ platformdirs==4.3.6
 prompt_toolkit==3.0.48
 ptyprocess==0.7.0
 pure_eval==0.2.3
+py==1.11.0
 Pygments==2.18.0
+retry==0.9.2
 rich==13.9.4
+scipy==1.14.1
 six==1.16.0
 stack-data==0.6.3
 textual==0.85.1
