dockerfile for backend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     environment:
       LIFT_ID: lift1
       RABBITMQ_HOST: rabbitmq
+
   ski-lift-2:
     image: krisztianszenasi/ski-lift:latest
     stdin_open: true
@@ -15,6 +16,27 @@ services:
     environment:
       LIFT_ID: lift2
       RABBITMQ_HOST: rabbitmq
+
+  backend:
+    image: backend-v1
+    container_name: backend
+    build: 
+      context: ./backend
+      args:
+        - SPRING_BOOT_PORT:${SPRING_BOOT_PORT}
+        - AMQP_PORT:${AMQP_PORT}
+    restart: unless-stopped
+    ports:
+      - ${SPRING_BOOT_PORT}:${SPRING_BOOT_PORT}
+      - ${AMQP_PORT}:${AMQP_PORT}
+    env_file:
+      - .env
+    depends_on:
+      - db
+    expose:
+      - ${SPRING_BOOT_PORT}
+      - ${AMQP_PORT}
+
   rabbitmq:
     image: rabbitmq:3-management
     container_name: rabbitmq
@@ -74,6 +96,7 @@ services:
 
   db:
     image: postgres:14.1-alpine
+    container_name: db
     restart: always
     environment:
       - POSTGRES_USER=postgres
