--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM maven:3.8.1-eclipse-temurin-17-alpine AS build
+FROM maven:3.9.6-eclipse-temurin-21 AS build
 WORKDIR /build
 
 COPY pom.xml .
@@ -7,7 +7,7 @@ COPY src ./src
 RUN mvn clean
 RUN mvn package -DskipTests
 
-FROM eclipse-temurin:17-jre-alpine
+FROM eclipse-temurin:21-jre-alpine
 WORKDIR /opt/app
 
 RUN addgroup -S spring && adduser -S spring -G spring && \
@@ -15,9 +15,6 @@ RUN addgroup -S spring && adduser -S spring -G spring && \
 USER spring:spring
 COPY --from=build /build/target/*.jar app.jar
 
-ENV JAVA_OPTS="-Xms512m -Xmx512m"
-
 EXPOSE ${SPRING_BOOT_PORT}
-EXPOSE ${AMQP_PORT}
 
-ENTRYPOINT ["sh", "-c", "java ${JAVA_OPTS} -jar app.jar"]
+ENTRYPOINT ["sh", "-c", "java -jar app.jar"]
