--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -8,10 +8,10 @@ api:
 spring:
     application:
         name: snow-peak-server
-    flyway:
-        enabled: true
-        locations: classpath:db.migration
-        default-schema: postgres
+#    flyway:
+#        enabled: true
+#        locations: classpath:db.migration
+#        default-schema: postgres
     datasource:
         url: jdbc:postgresql://localhost:5454/postgres
         username: postgres
@@ -54,3 +54,7 @@ springdoc:
         display-operation-id: true
         use-root-path: true
         filter: true
+
+config:
+    directory:
+        path: "config/"
