--- a/.env
+++ b/.env
@@ -1,3 +1,31 @@
-#springboot definitions
+# rabbitmq definitions
+
+# springboot definitions
 SPRING_BOOT_PORT=8080
 AMQP_PORT=5672
+
+# lift definitions
+# lift1
+LIFT_1_ID=977b821c-6e04-48f0-be89-0102f7c46843
+# lift1 geographic coordinates
+START_LAT=45.6
+START_LON=-73.6
+START_ELEVATION=1400
+END_LAT=45.62
+END_LON=-73.58
+END_ELEVATION=2400
+# lift1 operational parameters
+ARRIVAL_RATE=800
+LINE_SPEED=3.5
+CARRIER_CAPACITY=6
+CARRIER_SPACING=20
+CARRIERS_LOADING=2
+# lift1 operator configuration
+MASTER_OPERATOR=222229
+WORKER_OPERATORS=123456,789012,345678,901234
+
+# lift2
+LIFT_2_ID=3e1d0733-76c5-44f9-b66c-91ed7a1fd24c
+
+# lift3
+LIFT_3_ID=5b7129e2-66e2-46b8-a644-7f8f18c95dad
