--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
+# postgresql definitions
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=postgres
+
 # rabbitmq definitions
 
 # springboot definitions
