--- a/backend/src/main/resources/application-docker.yml
+++ b/backend/src/main/resources/application-docker.yml
@@ -11,17 +11,17 @@ spring:
   flyway:
     enabled: true
     locations: classpath:db.migration
-    default-schema: postgres
+    default-schema: public
 
   datasource:
-    url: jdbc:postgresql://db:5432/postgres
+    url: jdbc:postgresql://db:5432/postgres?currentSchema=postgres
     username: postgres
     password: postgres
     hikari:
       connection-timeout: 60000
       idle-timeout: 60000
       maximum-pool-size: 5
-      schema: postgres
+      schema: public
 
   jpa:
     show-sql: true
@@ -31,6 +31,9 @@ spring:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+    properties:
+      hibernate:
+        default-schema: public
 
   security:
     oauth2:
