--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -1,47 +1,68 @@
+user nginx;
+worker_processes auto;
+
+error_log /var/log/nginx/error.log notice;
+pid /var/run/nginx.pid;
+
+events {
+    worker_connections 1024;
+}
+
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log /var/log/nginx/access.log main;
+    error_log /var/log/nginx/error.log warn;
+
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+
     server {
         listen 80;
         server_name localhost;
+
         root /usr/share/nginx/html;
         index index.html;
 
-        # Handle Angular routing
+        # Enable compression
+        gzip on;
+        gzip_min_length 1000;
+        gzip_proxied expired no-cache no-store private auth;
+        gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
         location / {
             try_files $uri $uri/ /index.html;
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
         }
 
-        # Proxy configuration for API with path rewrite
+        # Cache static assets
+        location /assets/ {
+            expires 1y;
+            add_header Cache-Control "public";
+        }
+
+        # API proxy
         location /api/ {
-            # Remove /api/ prefix when forwarding to backend
-            rewrite ^/api/(.*) /$1 break;
-            
             proxy_pass http://backend:8080;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-
-            # Optional: Enable debug logging to match your proxy.conf.json logLevel
-            # access_log /var/log/nginx/api_debug.log debug;
         }
 
-        # Optional: Add gzip compression
-        gzip on;
-        gzip_vary on;
-        gzip_min_length 10240;
-        gzip_proxied expired no-cache no-store private auth;
-        gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml;
-        gzip_disable "MSIE [1-6]\.";
+        # Health check
+        location /health {
+            access_log off;
+            return 200 'healthy\n';
+        }
     }
-}
-
-events {
-    worker_connections 1024;
 }
