--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,29 @@
-version: '3.8'
-
 services:
   frontend:
     build:
       context: ./client
       args:
-        - ANGULAR_PORT:${ANGULAR_PORT}
+        - ANGULAR_PORT=${ANGULAR_PORT}
+    container_name: frontend
     restart: unless-stopped
     ports:
       - ${ANGULAR_PORT}:${ANGULAR_PORT}
+    environment:
+      - BACKEND_URL=http://backend:${SPRING_BOOT_PORT}
+      - RABBITMQ_WS_URL=ws://rabbitmq:15674/ws
+    volumes:
+      - ./client/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - backend
-
-  ski-lift-1:
-    image: krisztianszenasi/ski-lift:latest
-    stdin_open: true
-    tty: true
-    environment:
-      LIFT_ID: ${LIFT_1_ID}
-      RABBITMQ_HOST: rabbitmq
-
-  ski-lift-2:
-    image: krisztianszenasi/ski-lift:latest
-    stdin_open: true
-    tty: true
-    environment:
-      LIFT_ID: ${LIFT_2_ID}
-      RABBITMQ_HOST: rabbitmq
-
-  ski-lift-3:
-    image: krisztianszenasi/ski-lift:latest
-    stdin_open: true
-    tty: true
-    environment:
-      LIFT_ID: ${LIFT_3_ID}
-      RABBITMQ_HOST: rabbitmq
+    networks:
+      - frontend-network
+      - backend-network
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+        reservations:
+          memory: 128M
 
   backend:
     image: backend-v1
@@ -42,14 +31,65 @@ services:
     build:
       context: ./backend
       args:
-        - SPRING_BOOT_PORT:${SPRING_BOOT_PORT}
+        - SPRING_BOOT_PORT=${SPRING_BOOT_PORT}
     restart: unless-stopped
     ports:
       - ${SPRING_BOOT_PORT}:${SPRING_BOOT_PORT}
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/postgres
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=postgres
+      - KEYCLOAK_AUTH_SERVER_URL=http://keycloak:8080/auth
     env_file:
       - .env
     depends_on:
       - db
+      - rabbitmq
+      - keycloak
+    networks:
+      - frontend-network
+      - backend-network
+      - keycloak-network
+
+  ski-lift-1:
+    image: krisztianszenasi/ski-lift:latest
+    container_name: ski-lift-1
+    stdin_open: true
+    tty: true
+    environment:
+      LIFT_ID: ${LIFT_1_ID}
+      RABBITMQ_HOST: rabbitmq
+    networks:
+      - backend-network
+    depends_on:
+      - rabbitmq
+
+  ski-lift-2:
+    image: krisztianszenasi/ski-lift:latest
+    container_name: ski-lift-2
+    stdin_open: true
+    tty: true
+    environment:
+      LIFT_ID: ${LIFT_2_ID}
+      RABBITMQ_HOST: rabbitmq
+    networks:
+      - backend-network
+    depends_on:
+      - rabbitmq
+
+  ski-lift-3:
+    image: krisztianszenasi/ski-lift:latest
+    container_name: ski-lift-3
+    stdin_open: true
+    tty: true
+    environment:
+      LIFT_ID: ${LIFT_3_ID}
+      RABBITMQ_HOST: rabbitmq
+    networks:
+      - backend-network
+    depends_on:
+      - rabbitmq
 
   rabbitmq:
     image: rabbitmq:3-management
@@ -66,6 +106,8 @@ services:
     environment:
       - RABBITMQ_DEFAULT_USER=${RABBITMQ_USER:-guest}
       - RABBITMQ_DEFAULT_PASS=${RABBITMQ_PASSWORD:-guest}
+    networks:
+      - backend-network
     labels:
       kompose.service.type: ClusterIP
     deploy:
@@ -84,6 +126,10 @@ services:
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
       KC_FEATURES: preview
+      KC_DB: postgres
+      KC_DB_URL: jdbc:postgresql://keycloak-postgres:5432/keycloak
+      KC_DB_USERNAME: keycloak
+      KC_DB_PASSWORD: password
     volumes:
       - ./keycloak/realms:/opt/keycloak/data/import
     command:
@@ -113,17 +159,28 @@ services:
     container_name: db
     restart: always
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
     ports:
       - '5454:5432'
+    volumes:
+      - app_postgres_data:/var/lib/postgresql/data
+    networks:
+      - backend-network
 
 volumes:
   rabbitmq_data:
   rabbitmq_logs:
   postgres_data:
     driver: local
+  app_postgres_data:
+    driver: local
 
 networks:
+  frontend-network:
+    driver: bridge
+  backend-network:
+    driver: bridge
   keycloak-network:
     driver: bridge
