--- a/.env
+++ b/.env
@@ -9,6 +9,10 @@ POSTGRES_DB=postgres
 SPRING_BOOT_PORT=8080
 ANGULAR_PORT=80
 AMQP_PORT=5672
+SPRING_RABBITMQ_HOST=rabbitmq
+SPRING_RABBITMQ_PORT=5672
+SPRING_RABBITMQ_USERNAME=guest
+SPRING_RABBITMQ_PASSWORD=guest
 
 # lift definitions
 # lift1
