backend, lift configs

--- a/backend/config/lift1.env
+++ b/backend/config/lift1.env
@@ -1,10 +1,10 @@
 LIFT_ID=7ccbd8a0-73cc-47ac-bf6c-1f749aa60458
 # Geographic Coordinates
-START_LAT=45.5
-START_LON=-73.5
+START_LAT=46.69539731050563
+START_LON=13.914595364129971
 START_ELEVATION=1200
-END_LAT=45.52
-END_LON=-73.48
+END_LAT=46.693828878676364
+END_LON=13.92304607372536
 END_ELEVATION=2200
 # Operational Parameters
 ARRIVAL_RATE=1000
@@ -13,5 +13,5 @@ CARRIER_CAPACITY=4
 CARRIER_SPACING=15
 CARRIERS_LOADING=1
 # Operator Configuration
-MASTER_OPERATOR=95d78032-57e8-48b9-a1ce-296b3eb2c4b2
-WORKER_OPERATORS=09397786-7bd6-4615-93e5-55fe75528630,60886279-63d6-451d-b2a5-8ba3339152e4
+MASTER_OPERATOR=b21f687b-02fc-4556-b2a4-17a9eb905033
+WORKER_OPERATORS=ea898911-a8ef-427d-9868-6b587ce91f3c,d7ef3579-d6a6-4e26-ac53-b423cbca2c60
