--- a/backend/config/lift2.env
+++ b/backend/config/lift2.env
@@ -1,10 +1,10 @@
 LIFT_ID=3e1d0733-76c5-44f9-b66c-91ed7a1fd24c
 # Geographic Coordinates
-START_LAT=45.6
-START_LON=-73.6
+START_LAT=46.69739731050563
+START_LON=13.914595364129971
 START_ELEVATION=1400
-END_LAT=45.62
-END_LON=-73.58
+END_LAT=46.693828878676364
+END_LON=13.92304607372536
 END_ELEVATION=2400
 # Operational Parameters
 ARRIVAL_RATE=800
