--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -54,3 +54,7 @@ springdoc:
         display-operation-id: true
         use-root-path: true
         filter: true
+
+config:
+    directory:
+        path: "config/"
