--- a/.env
+++ b/.env
@@ -10,6 +10,9 @@ SPRING_BOOT_PORT=8080
 ANGULAR_PORT=80
 AMQP_PORT=5672
 
+SPRING_BOOT_LIFT_CONFIGS_LOCATION=/app/config
+
+
 # lift definitions
 # lift1
 LIFT_1_ID=977b821c-6e04-48f0-be89-0102f7c46843
