--- a/config/lift1.env
+++ b/config/lift1.env
@@ -13,5 +13,5 @@ CARRIER_CAPACITY=4
 CARRIER_SPACING=15
 CARRIERS_LOADING=1
 # Operator Configuration
-MASTER_OPERATOR=222229
-WORKER_OPERATORS=123456,789012,345678,901234
+MASTER_OPERATOR=b21f687b-02fc-4556-b2a4-17a9eb905033
+WORKER_OPERATORS=ea898911-a8ef-427d-9868-6b587ce91f3c,d7ef3579-d6a6-4e26-ac53-b423cbca2c60
