--- a/backend/src/main/resources/application-docker.yml
+++ b/backend/src/main/resources/application-docker.yml
@@ -12,6 +12,7 @@ spring:
     enabled: true
     locations: classpath:db.migration
     default-schema: public
+    baseline-on-migrate: true
 
   datasource:
     url: jdbc:postgresql://db:5432/postgres?currentSchema=postgres
