docker-compose updates

--- a/.env
+++ b/.env
@@ -1,9 +1,29 @@
-# postgresql definitions
+# postgres definitions
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
+POSTGRES_PORT=5432
+POSTGRES_EXTERNAL_PORT=5454
+
+# keycloak postgres definitions
+KEYCLOAK_POSTGRES_USER=keycloak
+KEYCLOAK_POSTGRES_PASSWORD=password
+KEYCLOAK_POSTGRES_DB=keycloak
+KEYCLOAK_POSTGRES_EXTERNAL_PORT=5464
+
+# keycloak definitions
+KEYCLOAK_EXTERNAL_PORT=9090
+KEYCLOAK_INTERNAL_PORT=8080
+KEYCLOAK_ADMIN=admin
+KEYCLOAK_ADMIN_PASSWORD=admin
+KC_FEATURES=preview
 
 # rabbitmq definitions
+RABBITMQ_USER=guest
+RABBITMQ_PASSWORD=guest
+RABBITMQ_AMQP_PORT=5672
+RABBITMQ_MANAGEMENT_PORT=15672
+RABBITMQ_WEBSOCKET_PORT=15674
 
 # springboot definitions
 SPRING_BOOT_PORT=8080
@@ -13,29 +33,28 @@ SPRING_RABBITMQ_HOST=rabbitmq
 SPRING_RABBITMQ_PORT=5672
 SPRING_RABBITMQ_USERNAME=guest
 SPRING_RABBITMQ_PASSWORD=guest
-
 SPRING_BOOT_LIFT_CONFIGS_LOCATION=/app/config
 
 
 # lift definitions
 # lift1
-LIFT_1_ID=977b821c-6e04-48f0-be89-0102f7c46843
+LIFT_1_ID=e93206d2-e357-4d2d-a43b-c194744dac9a
 # lift1 geographic coordinates
-START_LAT=45.6
-START_LON=-73.6
-START_ELEVATION=1400
-END_LAT=45.62
-END_LON=-73.58
-END_ELEVATION=2400
+LIFT_1_START_LAT=46.69539731050563
+LIFT_1_START_LON=13.914595364129971
+LIFT_1_START_ELEVATION=1200
+LIFT_1_END_LAT=46.693828878676364
+LIFT_1_END_LON=13.92304607372536
+LIFT_1_END_ELEVATION=2200
 # lift1 operational parameters
-ARRIVAL_RATE=800
-LINE_SPEED=3.5
-CARRIER_CAPACITY=6
-CARRIER_SPACING=20
-CARRIERS_LOADING=2
+LIFT_1_ARRIVAL_RATE=1000
+LIFT_1_LINE_SPEED=4
+LIFT_1_CARRIER_CAPACITY=4
+LIFT_1_CARRIER_SPACING=15
+LIFT_1_CARRIERS_LOADING=1
 # lift1 operator configuration
-MASTER_OPERATOR=222229
-WORKER_OPERATORS=123456,789012,345678,901234
+LIFT_1_MASTER_OPERATOR=b21f687b-02fc-4556-b2a4-17a9eb905033
+LIFT_1_WORKER_OPERATORS=ea898911-a8ef-427d-9868-6b587ce91f3c,d7ef3579-d6a6-4e26-ac53-b423cbca2c60
 
 # lift2
 LIFT_2_ID=3e1d0733-76c5-44f9-b66c-91ed7a1fd24c
