--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -145,24 +145,22 @@ services:
         reservations:
           memory: 256M
 
+
   keycloak:
+    build: .
     container_name: snow-peak-keycloak
-    image: quay.io/keycloak/keycloak:22.0.5
     ports:
       - ${KEYCLOAK_EXTERNAL_PORT}:${KEYCLOAK_INTERNAL_PORT}
     environment:
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: admin
-      KC_FEATURES: preview
       KC_DB: postgres
       KC_DB_URL: jdbc:postgresql://keycloak-postgres:5432/keycloak
       KC_DB_USERNAME: keycloak
       KC_DB_PASSWORD: password
-    volumes:
-      - ./keycloak/realms:/opt/keycloak/data/import
-    command:
-      - "start-dev"
-      - "--import-realm"
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+    command: 
+      - start-dev
+      - --import-realm
     depends_on:
       - keycloak-postgres
     networks:
