--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -25,6 +25,10 @@ http {
     keepalive_timeout 65;
     types_hash_max_size 2048;
 
+    upstream keycloak_upstream {
+        server snow-peak-keycloak:8080;
+    }
+
     server {
         listen 80;
         server_name localhost;
@@ -37,6 +41,22 @@ http {
         gzip_min_length 1000;
         gzip_proxied expired no-cache no-store private auth;
         gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
+        # Proxy Keycloak requests
+        location /realms/ {
+            proxy_pass http://keycloak_upstream/realms/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Allow all methods
+            proxy_method $request_method;
+        }
 
         location / {
             try_files $uri $uri/ /index.html;
