--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -39,7 +39,6 @@ http {
         # Enable compression
         gzip on;
         gzip_min_length 1000;
-        gzip_proxied expired no-cache no-store private auth;
         gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
         # Proxy Keycloak requests
@@ -70,13 +69,14 @@ http {
         }
 
         # API proxy
-        location /api/ {
+         location /api/ {
             proxy_pass http://backend:8080;
+            rewrite /api/(.*) /$1  break; 
             proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         # Health check
