docker-final?hopesooo

--- a/.env
+++ b/.env
@@ -1,43 +1,47 @@
-# postgres definitions
+################################# POSTGRES DEFINITIONS #################################
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 POSTGRES_PORT=5432
 POSTGRES_EXTERNAL_PORT=5454
 
-# keycloak postgres definitions
+################################# KEYCLOAK POSTGRES DEFINITIONS #################################
 KEYCLOAK_POSTGRES_USER=keycloak
 KEYCLOAK_POSTGRES_PASSWORD=password
 KEYCLOAK_POSTGRES_DB=keycloak
 KEYCLOAK_POSTGRES_EXTERNAL_PORT=5464
 
-# keycloak definitions
+################################# KEYCLOAK DEFINITIONS #################################
 KEYCLOAK_EXTERNAL_PORT=9090
 KEYCLOAK_INTERNAL_PORT=8080
 KEYCLOAK_ADMIN=admin
 KEYCLOAK_ADMIN_PASSWORD=admin
 KC_FEATURES=preview
+KC_DB=postgres
+KC_DB_URL=jdbc:postgresql://keycloak-postgres:5432/keycloak
 
-# rabbitmq definitions
+################################# RABBITMQ DEFINITIONS #################################
+RABBITMQ_HOST=rabbitmq
 RABBITMQ_USER=guest
 RABBITMQ_PASSWORD=guest
 RABBITMQ_AMQP_PORT=5672
 RABBITMQ_MANAGEMENT_PORT=15672
 RABBITMQ_WEBSOCKET_PORT=15674
 
-# springboot definitions
+################################# SPRINGBOOT DEFINITIONS #################################
 SPRING_BOOT_PORT=8080
 ANGULAR_PORT=80
-AMQP_PORT=5672
-SPRING_RABBITMQ_HOST=rabbitmq
-SPRING_RABBITMQ_PORT=5672
-SPRING_RABBITMQ_USERNAME=guest
-SPRING_RABBITMQ_PASSWORD=guest
 SPRING_BOOT_LIFT_CONFIGS_LOCATION=/app/config
+SPRING_PROFILES_ACTIVE=docker
+KEYCLOAK_AUTH_SERVER_URL=http://keycloak:8080/auth
+SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/postgres
 
+################################# FRONTEND DEFINITIONS #################################
+BACKEND_URL=http://backend:8080
+RABBITMQ_WS_URL= ws://rabbitmq:15674/ws
 
-# lift definitions
-# lift1
+################################# LIFT DEFINITIONS #################################
+# LIFT-1
 LIFT_1_ID=e93206d2-e357-4d2d-a43b-c194744dac9a
 # lift1 geographic coordinates
 LIFT_1_START_LAT=46.69539731050563
@@ -56,8 +60,40 @@ LIFT_1_CARRIERS_LOADING=1
 LIFT_1_MASTER_OPERATOR=b21f687b-02fc-4556-b2a4-17a9eb905033
 LIFT_1_WORKER_OPERATORS=ea898911-a8ef-427d-9868-6b587ce91f3c,d7ef3579-d6a6-4e26-ac53-b423cbca2c60
 
-# lift2
+# LIFT-2
 LIFT_2_ID=3e1d0733-76c5-44f9-b66c-91ed7a1fd24c
+# lift2 geographic coordinates
+LIFT_2_START_LAT=46.69739731050563
+LIFT_2_START_LON=13.914595364129971
+LIFT_2_START_ELEVATION=1200
+LIFT_2_END_LAT=46.693828878676364
+LIFT_2_END_LON=13.92304607372536
+LIFT_2_END_ELEVATION=2200
+# lift2 operational parameters
+LIFT_2_ARRIVAL_RATE=1000
+LIFT_2_LINE_SPEED=4
+LIFT_2_CARRIER_CAPACITY=4
+LIFT_2_CARRIER_SPACING=15
+LIFT_2_CARRIERS_LOADING=1
+# lift2 operator configuration
+LIFT_2_MASTER_OPERATOR=b21f687b-02fc-4556-b2a4-17a9eb905033
+LIFT_2_WORKER_OPERATORS=09397786-7bd6-4615-93e5-55fe75528630,60886279-63d6-451d-b2a5-8ba3339152e4
 
-# lift3
+# LIFT-3
 LIFT_3_ID=5b7129e2-66e2-46b8-a644-7f8f18c95dad
+# lift3 geographic coordinates
+LIFT_3_START_LAT=46.69539731050563
+LIFT_3_START_LON=13.914595364129971
+LIFT_3_START_ELEVATION=1200
+LIFT_3_END_LAT=46.693828878676364
+LIFT_3_END_LON=13.92304607372536
+LIFT_3_END_ELEVATION=2200
+# lift3 operational parameters
+LIFT_3_ARRIVAL_RATE=1000
+LIFT_3_LINE_SPEED=4
+LIFT_3_CARRIER_CAPACITY=4
+LIFT_3_CARRIER_SPACING=15
+LIFT_3_CARRIERS_LOADING=1
+# lift3 operator configuration
+LIFT_3_MASTER_OPERATOR=b21f687b-02fc-4556-b2a4-17a9eb905033
+LIFT_3_WORKER_OPERATORS=09397786-7bd6-4615-93e5-55fe75528630,60886279-63d6-451d-b2a5-8ba3339152e4
