backend - lift status, delete unused stuff, update lifts coordinate

--- a/backend/config/lift3.env
+++ b/backend/config/lift3.env
@@ -1,10 +1,10 @@
 LIFT_ID=5b7129e2-66e2-46b8-a644-7f8f18c95dad
 # Geographic Coordinates
-START_LAT=45.7
-START_LON=-73.7
+START_LAT=46.69539731050563
+START_LON=13.914595364129971
 START_ELEVATION=1600
-END_LAT=45.72
-END_LON=-73.68
+END_LAT=46.68339731050563
+END_LON=13.894595364129971
 END_ELEVATION=2600
 # Operational Parameters
 ARRIVAL_RATE=1200
