--- a/config/lift1.env
+++ b/config/lift1.env
@@ -1,10 +1,10 @@
-LIFT_ID=977b821c-6e04-48f0-be89-0102f7c46843
+LIFT_ID=e93206d2-e357-4d2d-a43b-c194744dac9a
 # Geographic Coordinates
-START_LAT=45.5
-START_LON=-73.5
+START_LAT=46.69539731050563
+START_LON=13.914595364129971
 START_ELEVATION=1200
-END_LAT=45.52
-END_LON=-73.48
+END_LAT=46.693828878676364
+END_LON=13.92304607372536
 END_ELEVATION=2200
 # Operational Parameters
 ARRIVAL_RATE=1000
