--- a/config/lift2.env
+++ b/config/lift2.env
@@ -1,10 +1,10 @@
 LIFT_ID=3e1d0733-76c5-44f9-b66c-91ed7a1fd24c
 # Geographic Coordinates
-START_LAT=45.6
-START_LON=-73.6
+START_LAT=46.69539731050563
+START_LON=13.914595364129971
 START_ELEVATION=1400
-END_LAT=45.62
-END_LON=-73.58
+END_LAT=46.70539731050563
+END_LON=13.914595364129971
 END_ELEVATION=2400
 # Operational Parameters
 ARRIVAL_RATE=800
@@ -13,5 +13,5 @@ CARRIER_CAPACITY=6
 CARRIER_SPACING=20
 CARRIERS_LOADING=2
 # Operator Configuration
-MASTER_OPERATOR=95d78032-57e8-48b9-a1ce-296b3eb2c4b2
+MASTER_OPERATOR=b21f687b-02fc-4556-b2a4-17a9eb905033
 WORKER_OPERATORS=09397786-7bd6-4615-93e5-55fe75528630,60886279-63d6-451d-b2a5-8ba3339152e4
