--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -1,47 +1,47 @@
 server:
-    port: 8080
+  port: 8080
 
 api:
-    version: v1
-    description: SnowPeak endpoints
+  version: v1
+  description: SnowPeak endpoints
 
 spring:
-    application:
-        name: snow-peak-server
-    flyway:
-        enabled: true
-        locations: classpath:db.migration
-        default-schema: postgres
-    datasource:
-        url: jdbc:postgresql://localhost:5454/postgres
-        username: postgres
-        password: postgres
-        hikari:
-            connection-timeout: 60000
-            idle-timeout: 60000
-            maximum-pool-size: 5
-            schema: postgres
-    jpa:
-        show-sql: true
-        format-sql: true
-        hibernate:
-            ddl-auto: update
-            naming:
-                physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-        database-platform: org.hibernate.dialect.PostgreSQLDialect
+  application:
+    name: snow-peak-server
+  flyway:
+    enabled: true
+    locations: classpath:db.migration
+    default-schema: postgres
+  datasource:
+    url: jdbc:postgresql://localhost:5454/postgres
+    username: postgres
+    password: postgres
+    hikari:
+      connection-timeout: 60000
+      idle-timeout: 60000
+      maximum-pool-size: 5
+      schema: postgres
+  jpa:
+    show-sql: true
+    format-sql: true
+    hibernate:
+      ddl-auto: update
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
 
 springdoc:
-    enable-native-support: true
-    default-produces-media-type: application/json
-    enable-data-rest: false
-    swagger-ui:
-        path: /swagger-ui.html
-        tags-sorter: alpha
-        operations-sorter: method
-        display-operation-id: true
-        use-root-path: true
-        filter: true
+  enable-native-support: true
+  default-produces-media-type: application/json
+  enable-data-rest: false
+  swagger-ui:
+    path: /swagger-ui.html
+    tags-sorter: alpha
+    operations-sorter: method
+    display-operation-id: true
+    use-root-path: true
+    filter: true
 
 config:
     directory:
-        path: "config/"
+        path: "../config/"
