--- a/k8s/manifest_prod.yaml
+++ b/k8s/manifest_prod.yaml
@@ -4,49 +4,50 @@ kind: ConfigMap
 metadata:
   name: app-config
 data:
-  RABBITMQ_HOST: rabbitmq
-  LIFT_1_ID: e93206d2-e357-4d2d-a43b-c194744dac9a
-  LIFT_1_START_LAT: 46.69539731050563
-  LIFT_1_START_LON: 13.914595364129971
-  LIFT_1_START_ELEVATION: 1200
-  LIFT_1_END_LAT: 46.693828878676364
-  LIFT_1_END_LON: 13.92304607372536
-  LIFT_1_END_ELEVATION: 2200
-  LIFT_1_ARRIVAL_RATE: 1000
-  LIFT_1_LINE_SPEED: 4
-  LIFT_1_CARRIER_CAPACITY: 4
-  LIFT_1_CARRIER_SPACING: 15
-  LIFT_1_CARRIERS_LOADING: 1
-  LIFT_1_MASTER_OPERATOR: b21f687b-02fc-4556-b2a4-17a9eb905033
-  LIFT_1_WORKER_OPERATORS: ea898911-a8ef-427d-9868-6b587ce91f3c,d7ef3579-d6a6-4e26-ac53-b423cbca2c60
-  LIFT_2_ID: 3e1d0733-76c5-44f9-b66c-91ed7a1fd24c
-  LIFT_2_START_LAT: 46.69739731050563
-  LIFT_2_START_LON: 13.914595364129971
-  LIFT_2_START_ELEVATION: 1200
-  LIFT_2_END_LAT: 46.693828878676364
-  LIFT_2_END_LON: 13.92304607372536
-  LIFT_2_END_ELEVATION: 2200
-  LIFT_2_ARRIVAL_RATE: 1000
-  LIFT_2_LINE_SPEED: 4
-  LIFT_2_CARRIER_CAPACITY: 4
-  LIFT_2_CARRIER_SPACING: 15
-  LIFT_2_CARRIERS_LOADING: 1
-  LIFT_2_MASTER_OPERATOR: b21f687b-02fc-4556-b2a4-17a9eb905033
-  LIFT_2_WORKER_OPERATORS: 09397786-7bd6-4615-93e5-55fe75528630,60886279-63d6-451d-b2a5-8ba3339152e4
-  LIFT_3_ID: 5b7129e2-66e2-46b8-a644-7f8f18c95dad
-  LIFT_3_START_LAT: 46.69539731050563
-  LIFT_3_START_LON: 13.914595364129971
-  LIFT_3_START_ELEVATION: 1200
-  LIFT_3_END_LAT: 46.693828878676364
-  LIFT_3_END_LON: 13.92304607372536
-  LIFT_3_END_ELEVATION: 2200
-  LIFT_3_ARRIVAL_RATE: 1000
-  LIFT_3_LINE_SPEED: 4
-  LIFT_3_CARRIER_CAPACITY: 4
-  LIFT_3_CARRIER_SPACING: 15
-  LIFT_3_CARRIERS_LOADING: 1
-  LIFT_3_MASTER_OPERATOR: b21f687b-02fc-4556-b2a4-17a9eb905033
-  LIFT_3_WORKER_OPERATORS: 09397786-7bd6-4615-93e5-55fe75528630,60886279-63d6-451d-b2a5-8ba3339152e4
+  RABBITMQ_HOST: "rabbitmq"
+  RABBITMQ_PORT: "5672"
+  LIFT_1_ID: "e93206d2-e357-4d2d-a43b-c194744dac9a"
+  LIFT_1_START_LAT: "46.69539731050563"
+  LIFT_1_START_LON: "13.914595364129971"
+  LIFT_1_START_ELEVATION: "1200"
+  LIFT_1_END_LAT: "46.693828878676364"
+  LIFT_1_END_LON: "13.92304607372536"
+  LIFT_1_END_ELEVATION: "2200"
+  LIFT_1_ARRIVAL_RATE: "1000"
+  LIFT_1_LINE_SPEED: "4"
+  LIFT_1_CARRIER_CAPACITY: "4"
+  LIFT_1_CARRIER_SPACING: "15"
+  LIFT_1_CARRIERS_LOADING: "1"
+  LIFT_1_MASTER_OPERATOR: "b21f687b-02fc-4556-b2a4-17a9eb905033"
+  LIFT_1_WORKER_OPERATORS: "ea898911-a8ef-427d-9868-6b587ce91f3c,d7ef3579-d6a6-4e26-ac53-b423cbca2c60"
+  LIFT_2_ID: "3e1d0733-76c5-44f9-b66c-91ed7a1fd24c"
+  LIFT_2_START_LAT: "46.69739731050563"
+  LIFT_2_START_LON: "13.914595364129971"
+  LIFT_2_START_ELEVATION: "1200"
+  LIFT_2_END_LAT: "46.693828878676364"
+  LIFT_2_END_LON: "13.92304607372536"
+  LIFT_2_END_ELEVATION: "2200"
+  LIFT_2_ARRIVAL_RATE: "1000"
+  LIFT_2_LINE_SPEED: "4"
+  LIFT_2_CARRIER_CAPACITY: "4"
+  LIFT_2_CARRIER_SPACING: "15"
+  LIFT_2_CARRIERS_LOADING: "1"
+  LIFT_2_MASTER_OPERATOR: "b21f687b-02fc-4556-b2a4-17a9eb905033"
+  LIFT_2_WORKER_OPERATORS: "09397786-7bd6-4615-93e5-55fe75528630,60886279-63d6-451d-b2a5-8ba3339152e4"
+  LIFT_3_ID: "5b7129e2-66e2-46b8-a644-7f8f18c95dad"
+  LIFT_3_START_LAT: "46.69539731050563"
+  LIFT_3_START_LON: "13.914595364129971"
+  LIFT_3_START_ELEVATION: "1200"
+  LIFT_3_END_LAT: "46.693828878676364"
+  LIFT_3_END_LON: "13.92304607372536"
+  LIFT_3_END_ELEVATION: "2200"
+  LIFT_3_ARRIVAL_RATE: "1000"
+  LIFT_3_LINE_SPEED: "4"
+  LIFT_3_CARRIER_CAPACITY: "4"
+  LIFT_3_CARRIER_SPACING: "15"
+  LIFT_3_CARRIERS_LOADING: "1"
+  LIFT_3_MASTER_OPERATOR: "b21f687b-02fc-4556-b2a4-17a9eb905033"
+  LIFT_3_WORKER_OPERATORS: "09397786-7bd6-4615-93e5-55fe75528630,60886279-63d6-451d-b2a5-8ba3339152e4"
 ---
 ################################# PVC-S #################################
 apiVersion: v1
@@ -442,6 +443,11 @@ spec:
                 configMapKeyRef:
                   name: app-config
                   key: RABBITMQ_HOST
+            - name: RABBITMQ_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: app-config
+                  key: RABBITMQ_PORT
             - name: START_LAT
               valueFrom:
                 configMapKeyRef:
@@ -538,6 +544,11 @@ spec:
                 configMapKeyRef:
                   name: app-config
                   key: RABBITMQ_HOST
+            - name: RABBITMQ_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: app-config
+                  key: RABBITMQ_PORT
             - name: START_LAT
               valueFrom:
                 configMapKeyRef:
@@ -634,6 +645,11 @@ spec:
                 configMapKeyRef:
                   name: app-config
                   key: RABBITMQ_HOST
+            - name: RABBITMQ_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: app-config
+                  key: RABBITMQ_PORT
             - name: START_LAT
               valueFrom:
                 configMapKeyRef:
