--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -26,7 +26,7 @@ http {
     types_hash_max_size 2048;
 
     upstream keycloak_upstream {
-        server snow-peak-keycloak:8080;
+        server keycloak:8080;
     }
 
     server {
@@ -71,7 +71,7 @@ http {
         # API proxy
          location /api/ {
             proxy_pass http://backend:8080;
-            rewrite /api/(.*) /$1  break; 
+            rewrite /api/(.*) /$1  break;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
