--- a/ski-lift/requirements.txt
+++ b/ski-lift/requirements.txt
@@ -1,22 +1,40 @@
+aiohappyeyeballs==2.4.3
+aiohttp==3.11.2
+aiohttp-jinja2==1.6
+aiosignal==1.3.1
+anyio==4.6.2.post1
 asttokens==2.4.1
+attrs==24.2.0
 camel-converter==4.0.1
+certifi==2024.8.30
+click==8.1.7
 colorama==0.4.6
 decorator==5.1.1
 executing==2.1.0
+frozenlist==1.5.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.27.2
+idna==3.10
 ipython==8.28.0
 isort==5.13.2
 jedi==0.19.1
+Jinja2==3.1.4
 linkify-it-py==2.0.3
 markdown-it-py==3.0.0
+MarkupSafe==3.0.2
 matplotlib-inline==0.1.7
 mdit-py-plugins==0.4.2
 mdurl==0.1.2
+msgpack==1.1.0
+multidict==6.1.0
 numpy==2.1.3
 parso==0.8.4
 pexpect==4.9.0
 pika==1.3.2
 platformdirs==4.3.6
 prompt_toolkit==3.0.48
+propcache==0.2.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 py==1.11.0
@@ -25,9 +43,14 @@ retry==0.9.2
 rich==13.9.4
 scipy==1.14.1
 six==1.16.0
+sniffio==1.3.1
 stack-data==0.6.3
 textual==0.85.1
+textual-dev==1.6.1
+textual-serve==1.1.1
 traitlets==5.14.3
 typing_extensions==4.12.2
 uc-micro-py==1.0.3
+urwid==2.6.16
 wcwidth==0.2.13
+yarl==1.17.2
